[gd_scene load_steps=21 format=2]

[ext_resource path="res://scenes/Configuration.gd" type="Script" id=1]
[ext_resource path="res://assets/Font.tres" type="DynamicFont" id=2]
[ext_resource path="res://scenes/TracksContainer.gd" type="Script" id=3]
[ext_resource path="res://assets/track1_miniature.png" type="Texture" id=4]
[ext_resource path="res://assets/track1_miniature_pressed.png" type="Texture" id=5]
[ext_resource path="res://assets/track1_miniature_hovered.png" type="Texture" id=6]
[ext_resource path="res://assets/track2_miniature.png" type="Texture" id=7]
[ext_resource path="res://assets/track2_miniature_pressed.png" type="Texture" id=8]
[ext_resource path="res://scenes/CarsContainer.gd" type="Script" id=9]
[ext_resource path="res://assets/p1.png" type="Texture" id=10]
[ext_resource path="res://assets/p2.png" type="Texture" id=11]
[ext_resource path="res://assets/p3.png" type="Texture" id=12]
[ext_resource path="res://assets/car1.png" type="Texture" id=13]
[ext_resource path="res://assets/car1_selected.png" type="Texture" id=14]
[ext_resource path="res://assets/car2.png" type="Texture" id=15]
[ext_resource path="res://assets/car2_selected.png" type="Texture" id=16]
[ext_resource path="res://assets/car3.png" type="Texture" id=17]
[ext_resource path="res://assets/car3_selected.png" type="Texture" id=18]
[ext_resource path="res://assets/SmallFont.tres" type="DynamicFont" id=19]

[sub_resource type="StreamTexture" id=1]

flags = 4
load_path = "res://.import/track2_miniature_hovered.png-7fa9402777a2479ed2172376a4ddc0fc.stex"

[node name="Configuration" type="VBoxContainer"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 360.0
margin_top = 52.0
margin_right = 740.0
margin_bottom = 548.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
script = ExtResource( 1 )

[node name="TracksLabel" type="Label" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 380.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 2 )
text = "Select map"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="TracksContainer" type="HBoxContainer" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 44.0
margin_right = 380.0
margin_bottom = 157.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 1
script = ExtResource( 3 )

[node name="Track1" type="TextureButton" parent="TracksContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 188.0
margin_bottom = 113.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 6 )
_sections_unfolded = [ "Textures" ]

[node name="Track2" type="TextureButton" parent="TracksContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 192.0
margin_right = 380.0
margin_bottom = 113.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 8 )
texture_hover = SubResource( 1 )
_sections_unfolded = [ "Mouse", "Textures" ]

[node name="CarsLabel" type="Label" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 161.0
margin_right = 380.0
margin_bottom = 201.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 2 )
text = "Select players"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_constants", "custom_fonts" ]

[node name="CarsContainer" type="HBoxContainer" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 205.0
margin_right = 380.0
margin_bottom = 337.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 1
script = ExtResource( 9 )
icons = [ ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ) ]

[node name="Car1" type="VBoxContainer" parent="CarsContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 90.0
margin_right = 154.0
margin_bottom = 132.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 1

[node name="TextureRect" type="TextureRect" parent="CarsContainer/Car1" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 64.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
stretch_mode = 4

[node name="TextureButton" type="TextureButton" parent="CarsContainer/Car1" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 4.0
margin_right = 64.0
margin_bottom = 132.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 13 )
texture_pressed = ExtResource( 14 )
texture_hover = ExtResource( 14 )
_sections_unfolded = [ "Textures" ]

[node name="Car2" type="VBoxContainer" parent="CarsContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 158.0
margin_right = 222.0
margin_bottom = 132.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="TextureRect" type="TextureRect" parent="CarsContainer/Car2" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 64.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
stretch_mode = 4

[node name="TextureButton" type="TextureButton" parent="CarsContainer/Car2" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 4.0
margin_right = 64.0
margin_bottom = 132.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 15 )
texture_pressed = ExtResource( 16 )
texture_hover = ExtResource( 16 )
_sections_unfolded = [ "Textures" ]

[node name="Car3" type="VBoxContainer" parent="CarsContainer" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 226.0
margin_right = 290.0
margin_bottom = 132.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="TextureRect" type="TextureRect" parent="CarsContainer/Car3" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 64.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
stretch_mode = 4

[node name="TextureButton" type="TextureButton" parent="CarsContainer/Car3" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 4.0
margin_right = 64.0
margin_bottom = 132.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 17 )
texture_pressed = ExtResource( 18 )
texture_hover = ExtResource( 18 )
_sections_unfolded = [ "Textures" ]

[node name="RoundsLabel" type="Label" parent="." index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 341.0
margin_right = 380.0
margin_bottom = 381.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 2 )
text = "Set rounds count"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="RoundsButton" type="OptionButton" parent="." index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 385.0
margin_right = 380.0
margin_bottom = 414.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 19 )
toggle_mode = false
action_mode = 0
enabled_focus_mode = 2
shortcut = null
group = null
flat = false
align = 1
items = [  ]
selected = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="Start" type="Button" parent="." index="6"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 418.0
margin_right = 380.0
margin_bottom = 447.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 19 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Start"
flat = false
align = 1
_sections_unfolded = [ "custom_fonts" ]

[node name="Back" type="Button" parent="." index="7"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 451.0
margin_right = 380.0
margin_bottom = 480.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 19 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Back"
flat = false
align = 1
_sections_unfolded = [ "custom_fonts" ]

[connection signal="pressed" from="TracksContainer/Track1" to="TracksContainer" method="_on_Track_pressed" binds= [ 0 ]]

[connection signal="pressed" from="TracksContainer/Track2" to="TracksContainer" method="_on_Track_pressed" binds= [ 1 ]]

[connection signal="pressed" from="CarsContainer/Car1/TextureButton" to="CarsContainer" method="_on_Car_pressed" binds= [ 0 ]]

[connection signal="pressed" from="CarsContainer/Car2/TextureButton" to="CarsContainer" method="_on_Car_pressed" binds= [ 1 ]]

[connection signal="pressed" from="CarsContainer/Car3/TextureButton" to="CarsContainer" method="_on_Car_pressed" binds= [ 2 ]]

[connection signal="pressed" from="Start" to="." method="_on_Start_pressed"]

[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]


